[project]
name = "comfyui_video_BC"
description = ""
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "numpy", "torch", "Pillow"]

[project.urls]
Repository = "https://github.com/JioJe/comfyui_video_BC"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "maqueai"
DisplayName = "comfyui_video_BC"
Icon = ""
includes = []
